# geolite

./: .gitignore  CLAUDE.md  CNAME  Cargo.toml  Dockerfile  Dockerfile.prebuilt  _typos.toml  changelog.md  decisions.md  readme.md  rustfmt.toml  sonar-project.properties
.githooks/: pre-commit
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: 10_ci_before_merge.yml  11_ci_master.yml  1_pre_build_quality_check.yml  20_prebuilt_images.yml  2_build.yml  3_image_quality_check.yml  7_distribute.yml  8_publish_release.yml
src/: main.rs  presets.rs
src/cli/: build.rs  build.test.rs  http_server.rs  merge.rs  merge.test.rs  mod.rs  query.rs
src/database/: admin_levels.rs  admin_levels.test.rs  admin_levels_hierarchy.rs  house_numbers.rs  house_numbers.test.rs  merge.rs  merge.test.rs  mod.rs  osm_nodes.rs  osm_nodes.test.rs  osm_pbf_blob_chunks.rs  osm_pbf_files.rs  osm_relations.rs  osm_relations.test.rs  osm_ways.rs  osm_ways.test.rs  readme.md
src/extract/: blob_chunks.rs  header.rs  house_numbers.rs  mod.rs  readme.md
src/http/: http.test.rs  mod.rs  openapi.rs  readme.md  status.rs  status.test.rs
src/index/: admin_levels_hierarchy_tantivy.rs  coordinates.rs  hierarchy.rs  mod.rs  readme.md  user_friendly_name.rs
src/optimize/: delete_intermediary_data.rs  mod.rs  readme.md  sqlite_file.rs
src/osm_pbf_file/: download.rs  download.test.rs  ls.rs  ls.test.rs  mod.rs  readme.md
src/query/: address.rs  coordinates.rs  coordinates.test.rs  house_number.rs  house_number.test.rs  mod.rs  query.test.rs  readme.md  text_search.test.rs
(+30 files in other folders)
